--- a/Task_2.ipynb
+++ b/Task_2.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOXkkJ81v//rX56eC6zaDVL",
+      "authorship_tag": "ABX9TyPOsPErF1VFMX+EZVrHWa8O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C2i1hVJfF4pR",
+        "id": "mcEO2BXLvWkm",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 238
-        },
-        "outputId": "44c2e9f1-f808-4cd5-a0ae-bbb98e3e2826"
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "import random\n",
-        "from random import randint\n",
-        "\n",
+        "from random import randint"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X0ibbIvpvq25",
+        "colab_type": "text"
+      },
+      "source": [
+        "Getting the data from the files"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XYA_NwvCvf25",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "\"\"\" Getting data \"\"\"\n",
         "TOP_RATE = 5\n",
         "ratings_cols = [\"user_id\", \"movie_id\", \"rating\", \"timestamp\"]\n",
@@ -51,8 +68,29 @@
         "movies = pd.read_csv(\"u.item\", sep='|', names=movies_cols, usecols=range(5), encoding='latin-1')\n",
         "\n",
         "users_cols = ['user_id', 'age', 'gender', 'occupation', 'zip_code']\n",
-        "users = pd.read_csv('u.user', sep='|', names=users_cols, encoding='latin-1')\n",
-        "\n",
+        "users = pd.read_csv('u.user', sep='|', names=users_cols, encoding='latin-1')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "viOnTnLrvw3B",
+        "colab_type": "text"
+      },
+      "source": [
+        "merge the tables to get rating on movies per users"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XLmxaB6Xvmmb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# rate per movie\n",
         "movie_ratings = pd.merge(movies, ratings, on='movie_id', how='inner')\n",
         "movie_stats = movie_ratings.groupby('movie_id', as_index=False)['rating'].mean()\n",
@@ -78,17 +116,74 @@
         "popularity_and_movies_names = pd.merge(movies_sorted_by_popularity, movies, on='movie_id', how='inner')\n",
         "\n",
         "ratings_test = pd.read_csv(\"u1.test\", sep='\\t', names=ratings_cols, encoding='latin-1')\n",
-        "movie_mean_rating_test = ratings_test.groupby('movie_id', as_index=False)['rating'].mean()\n",
-        "\n",
-        "\"\"\" Ex. 2.a \"\"\"\n",
+        "movie_mean_rating_test = ratings_test.groupby('movie_id', as_index=False)['rating'].mean()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cHy9BU84wAqA",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ex. 2.a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SvHVkdy8wXTQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ac9d58e3-9a9c-4644-e92b-c97a513fc0b5"
+      },
+      "source": [
         "# merging the model (by the train) to the test data\n",
         "train_and_test_results = pd.merge(movie_mean_rating_test, popularity_and_movies_names, on='movie_id', how='inner')\n",
         "\n",
         "MAE = np.sum(abs(train_and_test_results['rating_x'] - train_and_test_results['rating_y'])) / \\\n",
         "      train_and_test_results.shape[0]\n",
         "print(\"MAE for Ex 2.a = \" + str(MAE))\n",
-        "\n",
-        "\"\"\" Ex. 2.b \"\"\"\n",
+        "\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "MAE for Ex 2.a = 0.4740090531709019\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yMsB2-bZwRm1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ex. 2.b"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UtBcWD-gwVt_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "05ce5710-32e8-4a14-ff53-922e702001d0"
+      },
+      "source": [
         "# getting all movies watched by all users\n",
         "user_watched_movies_train = (ratings.groupby('user_id')['movie_id'].apply(list)).to_dict()\n",
         "list_recommended_by_rating = ratings_sorted['movie_id'].tolist()\n",
@@ -141,9 +236,44 @@
         "print(\"Recall by rating: \" + str(round(recall_rec_by_rating, 4)))\n",
         "print(\"Recall by random: \" + str(round(recall_rec_by_random, 4)))\n",
         "print(\"Precision by rating: \" + str(round(precision_rec_by_rating, 4)))\n",
-        "print(\"Precision by random: \" + str(round(precision_rec_by_random, 4)))\n",
-        "\n",
-        "\"\"\" Ex. 2.c \"\"\"\n",
+        "print(\"Precision by random: \" + str(round(precision_rec_by_random, 4)))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Recall by rating: 0.021\n",
+            "Recall by random: 0.0131\n",
+            "Precision by rating: 0.0459\n",
+            "Precision by random: 0.0284\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wzAOeYA0whaM",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ex. 2.c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C2i1hVJfF4pR",
+        "colab_type": "code",
+        "outputId": "cfd3d59a-d117-406e-cb6e-57d02b8dc22e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 158
+        }
+      },
+      "source": [
         "\"\"\" Female \"\"\"\n",
         "# returning action from ex. 2.b for all female's row in the data\n",
         "ratings_and_users_test = pd.merge(ratings_test, users, on='user_id')\n",
@@ -248,24 +378,19 @@
         "print(\"Precision by rating for males: \" + str(round(precision_rec_by_rating_male, 4)))\n",
         "print(\"Precision by random for males: \" + str(round(precision_rec_by_random_male, 4)))"
       ],
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "MAE for Ex 2.a = 0.4740090531709019\n",
-            "Recall by rating: 0.021\n",
-            "Recall by random: 0.0123\n",
-            "Precision by rating: 0.0459\n",
-            "Precision by random: 0.0269\n",
             "Recall by rating for females: 0.0103\n",
-            "Recall by random for females: 0.0155\n",
+            "Recall by random for females: 0.0139\n",
             "Precision by rating for females: 0.0191\n",
-            "Precision by random for females: 0.0286\n",
+            "Precision by random for females: 0.0256\n",
             "Recall by rating for males: 0.0026\n",
-            "Recall by random for males: 0.0115\n",
+            "Recall by random for males: 0.0123\n",
             "Precision by rating for males: 0.0059\n",
-            "Precision by random for males: 0.0265\n"
+            "Precision by random for males: 0.0284\n"
           ],
           "name": "stdout"
         }
